Update all endpoint role guards, fix random stuff