@@ -25,6 +25,7 @@ import rs.raf.bank_service.exceptions.UnauthorizedException;
 import rs.raf.bank_service.repository.AccountRepository;
 import rs.raf.bank_service.repository.CardRepository;
 import rs.raf.bank_service.security.JwtAuthenticationFilter;
+import rs.raf.bank_service.utils.JwtTokenUtil;
 
 import javax.persistence.EntityNotFoundException;
 import java.math.BigDecimal;
@@ -41,6 +42,7 @@ public class CardService {
     private final RabbitTemplate rabbitTemplate;
     private final AccountRepository accountRepository;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final JwtTokenUtil jwtTokenUtil;
     AccountMapper accountMapper;
 
     public static String generateCVV() {
@@ -199,11 +201,6 @@ public class CardService {
     }
 
 
-        @Operation(summary = "Retrieve cards by account", description = "Returns a list of card DTOs associated with the provided account number.")
-        @ApiResponses(value = {
-                        @ApiResponse(responseCode = "200", description = "Cards retrieved successfully"),
-                        @ApiResponse(responseCode = "404", description = "No cards found for the given account")
-        })
         public List<CardDto> getCardsByAccount(
                         @Parameter(description = "Account number to search for", example = "222222222222222222") String accountNumber) {
                 List<Card> cards = cardRepository.findByAccount_AccountNumber(accountNumber);
@@ -213,11 +210,6 @@ public class CardService {
                 }).collect(Collectors.toList());
         }
 
-        @Operation(summary = "Change card status", description = "Changes the status of a card identified by its card number and sends an email notification to the card owner.")
-        @ApiResponses(value = {
-                        @ApiResponse(responseCode = "200", description = "Card status updated and notification sent successfully"),
-                        @ApiResponse(responseCode = "404", description = "Card not found")
-        })
         public void changeCardStatus(
                         @Parameter(description = "Card number", example = "1234123412341234") String cardNumber,
                         @Parameter(description = "New status for the card", example = "BLOCKED") CardStatus newStatus) {
@@ -239,17 +231,15 @@ public class CardService {
 
         public List<CardDto> getUserCards(String authHeader) {
 
-                String token = authHeader.substring(7); // Remove "Bearer "
-                Claims claims = jwtAuthenticationFilter.getClaimsFromToken(token);
-                Long currentUserId = claims.get("userId", Long.class);
+                Long clientId = jwtTokenUtil.getUserIdFromAuthHeader(authHeader);
 
-                List<Account> userAccounts = accountRepository.findByClientId(currentUserId);
+                List<Account> userAccounts = accountRepository.findByClientId(clientId);
 
                 List<Card> userCards = userAccounts.stream()
                                 .flatMap(account -> account.getCards().stream())
-                                .collect(Collectors.toList());
+                                .toList();
 
-                ClientDto owner = userClient.getClientById(currentUserId);
+                ClientDto owner = userClient.getClientById(clientId);
                 return userCards.stream()
                                 .map(card -> CardMapper.toDto(card, owner))
                                 .collect(Collectors.toList());
@@ -257,15 +247,13 @@ public class CardService {
 
         public void blockCardByUser(String cardNumber, String authHeader) {
 
-                String token = authHeader.substring(7); // Remove "Bearer "
-                Claims claims = jwtAuthenticationFilter.getClaimsFromToken(token);
-                Long currentUserId = claims.get("userId", Long.class);
+                Long clientId = jwtTokenUtil.getUserIdFromAuthHeader(authHeader);
 
                 Card card = cardRepository.findByCardNumber(cardNumber)
                                 .orElseThrow(() -> new EntityNotFoundException(
                                                 "Card not found with number: " + cardNumber));
 
-                if (!card.getAccount().getClientId().equals(currentUserId)) {
+                if (!card.getAccount().getClientId().equals(clientId)) {
                         throw new UnauthorizedException("You can only block your own cards");
                 }
 
